[tool.poetry]
name = "turbo-suite"
version = "0.1.0"
description = ""
authors = ["Kelly Kostopoulou <kelkost@cs.columbia.edu>, Pierre Tholoniat <pierre@cs.columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
black = "22.12.0"
jupyter = "^1.0.0"
typing-extensions = "3.10.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
